# BareMetal-networking

./: .gitignore  CMakeLists.txt  Makefile  README.md  stamp.h  test.sh
examples/: CMakeLists.txt  Makefile  example1.c  tcp-pack.c
include/libnet/: accessor.h  buffer.h  crc.h  error.h  ethernet.h  http.h  ip.h  ipv4.h  ipv6.h  mac.h  mutator.h  pipe.h  protocol.h  stack.h  tcp.h
include/libnet/posix/: pipe.h  socket.h
include/netstack/: accessor.h  buffer.h  crc.h  error.h  ethernet.h  http.h  ip.h  ipv4.h  ipv6.h  mac.h  mutator.h  pipe.h  protocol.h  stack.h  tcp.h
include/netstack/posix/: socket.h
src/: CMakeLists.txt  Makefile  accessor.c  buffer-test.c  buffer.c  build.sh  clean.sh  crc-test.c  crc.c  crc32.c  ethernet-test.c  ethernet.c  http.c  ipv6-test.c  ipv6.c  mac-test.c  mac.c  mutator.c  pipe.c  protocol.c  stack.c  tcp-test.c  tcp.c  test.h  test.sh
src/posix/: pipe.c  socket.c
